Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-1630

#include "proton/default_container.hpp" does not compile

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • proton-c-0.18.0
    • proton-c-0.18.0
    • cpp-binding
    • None

    Description

      Add the following include to your application, or say container_test.cpp proton file.

      #include "proton/default_container.hpp"
      

      Attempt to compile and behold the error

      In file included from /home/jdanek/Work/repos/qpid-proton/proton-c/bindings/cpp/src/container_test.cpp:21:0:
      /home/jdanek/Work/repos/qpid-proton/proton-c/bindings/cpp/include/proton/default_container.hpp:31:42: error: typedef ‘proton::PN_CPP_DEPRECATED’ is initialized (use decltype instead)
       typedef class container PN_CPP_DEPRECATED("Use 'proton::container'") default_container;
                                                ^
      make[3]: *** [proton-c/bindings/cpp/CMakeFiles/container_test.dir/build.make:63: proton-c/bindings/cpp/CMakeFiles/container_test.dir/src/container_test.cpp.o] Error 1
      make[2]: *** [CMakeFiles/Makefile2:1609: proton-c/bindings/cpp/CMakeFiles/container_test.dir/all] Error 2
      make[1]: *** [CMakeFiles/Makefile2:1621: proton-c/bindings/cpp/CMakeFiles/container_test.dir/rule] Error 2
      

      Attachments

        Activity

          People

            jross Justin Ross
            jdanek Jiri Daněk
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: