PROTON-1630: Add a missing include